Overflow bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body, html {
   margin: 0;
   padding: 0;
   width: 100%;
-  overflow-x: hidden; 
+  overflow-x: auto; 
 }
 
 body {
